fix: tr hover for dark mode

--- a/bourse/dashboard/assets/style.css
+++ b/bourse/dashboard/assets/style.css
@@ -71,7 +71,7 @@ th {
 }
 
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: grey;
 }
 
 .material-symbols-outlined {
